Update index.html fluid logo

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8 text-center">
                     <div class="hero-content">
-                        <div class="fade-in"><img src="logo.png"></div>
+                        <div class="fade-in"><img src="logo.png" class="img-fluid"></div>
                         <h1 class="hero-quote fade-in delay-1">Made for the small, imagined for the all.</h1>
                         <p class="hero-subtext fade-in delay-2">The land of coffee and play.</p>
                     </div>
