--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@ made strong. Join the list to hear when we open.">
   <meta name="twitter:image" content="https://mimloo.com/assets/og-image.png">
 
   <!-- Icons -->
-  <link rel="icon" href="assets/favicon.ico">
-  <link rel="apple-touch-icon" href="assets/apple-touch-icon.png" sizes="180x180">
-  <link rel="manifest" href="assets/site.webmanifest">
+  <link rel="icon" href="favicon.ico">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png" sizes="180x180">
+  <link rel="manifest" href="site.webmanifest">
 
   <!-- CSS & Fonts -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -66,7 +66,7 @@ made strong. Join the list to hear when we open.">
 
     /* Hero Section */
     .hero-section {
-      background-image: url('assets/hero-background.png');
+      background-image: url('hero-background.png');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -122,7 +122,7 @@ made strong. Join the list to hear when we open.">
           <div class="hero-content">
             <!-- Use padded square version; do not lazy-load LCP image -->
             <div class="fade-in">
-              <img src="assets/logo-padded-1024.png" class="img-fluid" width="1024" height="1024" alt="Mimloo logo">
+              <img src="logo.png" class="img-fluid" width="1024" height="1024" alt="Mimloo logo">
             </div>
             <h1 class="hero-quote fade-in delay-1">Made for the small, imagined for the all.</h1>
             <p class="hero-subtext fade-in delay-2">The land of coffee and play.</p>
@@ -137,7 +137,7 @@ made strong. Join the list to hear when we open.">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-4">
-          <img class="img-fluid" src="assets/side.png" loading="lazy" alt="Playful illustration for Mimloo">
+          <img class="img-fluid" src="side.png" loading="lazy" alt="Playful illustration for Mimloo">
         </div>
         <div class="col-lg-6">
           <h2 class="coming-soon-title fade-in">Coming Soon</h2>
