Update index.html images

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ made strong. Join the list to hear when we open.">
 
     /* Hero Section */
     .hero-section {
-      background-image: url('hero-background.png');
+      background-image: url('https://mimloo.com/assets/hero-background.png');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -122,7 +122,7 @@ made strong. Join the list to hear when we open.">
           <div class="hero-content">
             <!-- Use padded square version; do not lazy-load LCP image -->
             <div class="fade-in">
-              <img src="logo.png" class="img-fluid" width="1024" height="1024" alt="Mimloo logo">
+              <img src="https://mimloo.com/logo.png" class="img-fluid" width="1024" height="1024" alt="Mimloo logo">
             </div>
             <h1 class="hero-quote fade-in delay-1">Made for the small, imagined for the all.</h1>
             <p class="hero-subtext fade-in delay-2">The land of coffee and play.</p>
@@ -137,7 +137,7 @@ made strong. Join the list to hear when we open.">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-4">
-          <img class="img-fluid" src="side.png" loading="lazy" alt="Playful illustration for Mimloo">
+          <img class="img-fluid" src="https://mimloo.com/assets/side.png" loading="lazy" alt="Playful illustration for Mimloo">
         </div>
         <div class="col-lg-6">
           <h2 class="coming-soon-title fade-in">Coming Soon</h2>
