--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ made strong. Join the list to hear when we open.">
 
     /* Hero Section */
     .hero-section {
-      background-image: url('https://mimloo.com/assets/hero-background.png');
+      background-image: url('hero-background.png');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
